metabase/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metabase
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
