metabase/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
